Update streak counter dynamically and fix icon distortion

--- a/PI-main/static/css/actividades.css
+++ b/PI-main/static/css/actividades.css
@@ -110,6 +110,7 @@ h2{
     width: 32px;
     height: 32px;
     margin-right: 10px;
+    object-fit: contain;
 }
 
 /* Checkbox circular personalizado */
